--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
   compile "org.jruby:jruby-complete:1.7.11"
   compile "io.undertow:undertow-core:1.0.1.Final"
   compile "io.undertow:undertow-servlet:1.0.1.Final"
+  compile "org.quartz-scheduler:quartz:2.2.1"
 
   testCompile 'junit:junit:4.11'
   testCompile 'org.jglue.cdi-unit:cdi-unit:3.0.1'
