--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,16 @@ dependencies {
   compile 'javax.enterprise:cdi-api:1.1'
 
   // compile "com.zaxxer:HikariCP:1.3.8"
-  compile "org.yaml:snakeyaml:1.14-SNAPSHOT"
-  compile "org.jruby:jruby-complete:1.7.11"
+  compile "org.yaml:snakeyaml:1.14"
+  compile "org.jruby:jruby-complete:1.7.13"
   compile "io.undertow:undertow-core:1.0.1.Final"
   compile "io.undertow:undertow-servlet:1.0.1.Final"
   compile "org.quartz-scheduler:quartz:2.2.1"
+  compile "org.apache.deltaspike.core:deltaspike-core-api:1.0.2"
+  compile "org.apache.deltaspike.core:deltaspike-core-impl:1.0.2"
+  compile "org.apache.deltaspike.cdictrl:deltaspike-cdictrl-api:1.0.2"
+  compile "org.apache.deltaspike.cdictrl:deltaspike-cdictrl-owb:1.0.2"
+  compile "org.jruby.rack:jruby-rack:1.1.14"
 
   testCompile 'junit:junit:4.11'
   testCompile 'org.jglue.cdi-unit:cdi-unit:3.0.1'
