--- a/build.gradle
+++ b/build.gradle
@@ -14,16 +14,10 @@ dependencies {
   compile "io.undertow:undertow-core:1.0.1.Final"
   compile "io.undertow:undertow-servlet:1.0.1.Final"
   compile "org.quartz-scheduler:quartz:2.2.1"
-  compile "org.apache.deltaspike.core:deltaspike-core-api:1.0.2"
-  compile "org.apache.deltaspike.core:deltaspike-core-impl:1.0.2"
-  compile "org.apache.deltaspike.cdictrl:deltaspike-cdictrl-api:1.0.2"
-  compile "org.apache.deltaspike.cdictrl:deltaspike-cdictrl-owb:1.0.2"
-  compile "org.apache.deltaspike.modules:deltaspike-servlet-module-api:1.0.2"
-  compile "org.apache.deltaspike.modules:deltaspike-servlet-module-impl:1.0.2"
+  compile "org.jboss.weld.se:weld-se-core:2.2.4.Final"
   compile "org.jruby.rack:jruby-rack:1.1.14"
 
   testCompile 'junit:junit:4.11'
-  testCompile 'org.jglue.cdi-unit:cdi-unit:3.0.1'
 
 }
 
