--- a/build.gradle
+++ b/build.gradle
@@ -19,16 +19,17 @@ configurations {
 }
 
 dependencies {
-  compile "org.jruby:jruby-complete:1.7.13"
+  compile "org.jruby:jruby-complete:1.7.19"
   compile 'javax.enterprise:cdi-api:1.1'
   // compile "com.zaxxer:HikariCP:1.3.8"
-  compile "org.yaml:snakeyaml:1.14"
-  compile "io.undertow:undertow-core:1.0.1.Final"
-  compile "io.undertow:undertow-servlet:1.0.1.Final"
+  compile "org.yaml:snakeyaml:1.15"
+  compile "io.undertow:undertow-core:1.2.0.Beta10"
+  compile "io.undertow:undertow-servlet:1.2.0.Beta10"
   compile "org.quartz-scheduler:quartz:2.2.1"
-  compile "org.jboss.weld.se:weld-se-core:2.2.4.Final"
-  compile "org.jruby.rack:jruby-rack:1.1.17"
+  compile "org.jboss.weld.se:weld-se-core:2.2.9.Final"
+  compile "org.jruby.rack:jruby-rack:1.1.18"
 
+  testCompile 'org.powermock:powermock-mockito-release-full:1.6.1'
   testCompile 'junit:junit:4.11'
 
 }
@@ -93,6 +94,12 @@ test.doFirst {
 
 signing {
     sign configurations.archives
+}
+
+eclipse {
+  classpath {
+    defaultOutputDir = file('build/classes')
+  }
 }
 
 def loadProperties(String sourceFileName) {
