--- a/build.gradle
+++ b/build.gradle
@@ -22,19 +22,21 @@ plugins {
 // https://docs.gradle.org/current/userguide/publishing_maven.html#publishing_maven:complete_example
 
 dependencies {
-  implementation "org.jruby:jruby-complete:1.7.19"
-  implementation 'javax.enterprise:cdi-api:1.1'
+  implementation group: 'org.jruby', name: 'jruby-complete', version: '9.2.17.0'
+  
+  implementation 'org.jboss.weld:weld-core-impl:4.0.1.Final'
   // compile "com.zaxxer:HikariCP:1.3.8"
-  implementation "org.yaml:snakeyaml:1.15"
-  implementation "io.undertow:undertow-core:1.2.0.Beta10"
-  implementation "io.undertow:undertow-servlet:1.2.0.Beta10"
-  implementation "org.quartz-scheduler:quartz:2.2.1"
-  implementation "org.jboss.weld.se:weld-se-core:2.2.9.Final"
-  implementation "org.jruby.rack:jruby-rack:1.1.18"
+  implementation "org.yaml:snakeyaml:1.28"
+  implementation "io.undertow:undertow-core:2.2.7.Final"
+  implementation "io.undertow:undertow-servlet:2.2.7.Final"
+  implementation "org.quartz-scheduler:quartz:2.2.3"
+  implementation "org.jboss.weld.se:weld-se-core:4.0.1.Final"
+  implementation "org.jruby.rack:jruby-rack:1.1.21"
   implementation "org.stokesdrift:accretion:0.0.1-SNAPSHOT"
+  implementation "jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0"
 
-  testImplementation 'org.powermock:powermock-mockito-release-full:1.6.1'
-  testImplementation 'junit:junit:4.11'
+  testImplementation 'org.powermock:powermock-mockito-release-full:1.6.4'
+  testImplementation 'junit:junit:4.13.2'
 
 }
 
